--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<log4j.version>1.2.17</log4j.version>
 	</properties>
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.22</version>
@@ -20,7 +20,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.22</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -32,6 +32,12 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jfrog.artifactory.client</groupId>
+			<artifactId>artifactory-java-client-services</artifactId>
+			<version>LATEST</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
